# srp-chat-cpp

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt
example/lib/: CMakeLists.txt
example/src/: app.cpp
example/src/include/: app.h
example/tests/: CMakeLists.txt
include/chat/auth/: srp_client.hpp  srp_server.hpp  srp_types.hpp  srp_utils.hpp
include/chat/client/: client.hpp
include/chat/common/: buffer.hpp  messages.hpp  protocol.hpp  types.hpp
include/chat/crypto/: aes_engine.hpp
include/chat/server/: connection_manager.hpp  server.hpp
lib/: mylib.cpp
lib/include/: mylib.h
src/: CMakeLists.txt  main.cpp
src/auth/: srp_client.cpp  srp_server.cpp  srp_utils.cpp
src/client/: client.cpp  main.cpp
src/common/: buffer.cpp  protocol.cpp  types.cpp
src/crypto/: aes_engine.cpp
src/server/: connection_manager.cpp  main.cpp  server.cpp
tests/: aes_tests.cpp  connection_manager_tests.cpp  protocol_tests.cpp  test_mylib.cpp  types_tests.cpp
